@@ -24,7 +24,7 @@ public interface TileProvider {
 	public byte[] getTileData(int x, int y) throws IOException;
 
 	public byte[] getTileData(int layer, int x, int y) throws IOException;
-
+	
 	public BufferedImage getTileImage(int x, int y) throws IOException;
 
 	public BufferedImage getTileImage(int x, int y, int layer) throws IOException;
